base_nginx/nginx.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-http
  namespace: circ-nginx-demo
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - name: nginx-demo-http
    protocol: TCP
    port: 80
    targetPort: 80
