base_nginx/nginx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
  namespace: nginx-circ-demo
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.diagon.ally
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nginx-demo-http
                port:
                  number: 80
            path: /
